@@ -1,5 +1,12 @@
 [b]Version 0.6.8[/b]:
 
+(2009-07-13)
+ * Moved the option "Visualize motion vectors" from menu Options to menu
+   Video.
+
+(2009-07-12)
+ * Fixed error "302 - Moved temporarily" when connecting to opensubtitles.org.
+
 (2009-07-09)
  * Added the new option "Jump" to the TV and radio menus. It displays a dialog
    which allows the user to enter the number of the channel to open.
